Commit inicial para o projeto HTMLMail

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                 <div class="email-option" onclick="setEmail('pedroivanpimenta@hotmail.com')">pedroivanpimenta@hotmail.com</div>
                 <div class="email-option" onclick="setEmail('pedroivanpfagundes@gmail.com')">pedroivanpfagundes@gmail.com</div>
                 <div class="email-option" onclick="setEmail('felipeqburian@gmail.com')">felipeqburian@gmail.com</div>
+                <div class="email-option" onclick="setEmail('helder.almirante@eurofarma.com')">helder.almirante@eurofarma.com</div>
             </div>
 
             <!-- Campo para o Assunto -->
