Commit inicial para o projeto HTMLMail

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                 <div class="email-option" onclick="setEmail('pedroivanpimenta@hotmail.com')">pedroivanpimenta@hotmail.com</div>
                 <div class="email-option" onclick="setEmail('pedroivanpfagundes@gmail.com')">pedroivanpfagundes@gmail.com</div>
                 <div class="email-option" onclick="setEmail('felipeqburian@gmail.com')">felipeqburian@gmail.com</div>
+                <div class="email-option" onclick="setEmail('29133@momentafarma.com.br')">Jose Wanrley Fernandes de Azevedo </div>
+                <div class="email-option" onclick="setEmail('jeferson.takata@eurofarma.com')">Jeferson Massatoshi Takata</div>
+                <div class="email-option" onclick="setEmail('giovana.ferreira@eurofarma.com')">Giovana Portugal Ferreira</div>
                 <div class="email-option" onclick="setEmail('helder.almirante@eurofarma.com')">helder.almirante@eurofarma.com</div>
             </div>
 
