Commit inicial para o projeto HTMLMail

--- a/index.html
+++ b/index.html
@@ -90,13 +90,23 @@
 
             <!-- Quadradinhos com e-mails pré-definidos -->
             <div>
+                <div>4Avalon</div>
                 <div class="email-option" onclick="setEmail('pedroivanpimenta@hotmail.com')">pedroivanpimenta@hotmail.com</div>
                 <div class="email-option" onclick="setEmail('pedroivanpfagundes@gmail.com')">pedroivanpfagundes@gmail.com</div>
                 <div class="email-option" onclick="setEmail('felipeqburian@gmail.com')">felipeqburian@gmail.com</div>
+                <div>eurofarma</div>
+                <div class="email-option" onclick="setEmail('anne.silva@eurofarma.com')">Jeferson Massatoshi Takata</div>
                 <div class="email-option" onclick="setEmail('29133@momentafarma.com.br')">Jose Wanrley Fernandes de Azevedo </div>
                 <div class="email-option" onclick="setEmail('jeferson.takata@eurofarma.com')">Jeferson Massatoshi Takata</div>
                 <div class="email-option" onclick="setEmail('giovana.ferreira@eurofarma.com')">Giovana Portugal Ferreira</div>
                 <div class="email-option" onclick="setEmail('helder.almirante@eurofarma.com')">helder.almirante@eurofarma.com</div>
+                <div>indigo</div>
+                <div class="email-option" onclick="setEmail('mayelle.paz@indigohive.com.br')">JMayelle Maria Paz Lima</div>
+                <div class="email-option" onclick="setEmail('felipe.minuceli@indigohive.com.br')">Felipe Minuceli</div>
+                <div class="email-option" onclick="setEmail('helder.almirante@eurofarma.com')">helder.almirante@eurofarma.com</div>
+
+
+
             </div>
 
             <!-- Campo para o Assunto -->
